--- a/home.html
+++ b/home.html
@@ -49,14 +49,57 @@
         <h5 class="text-center sub-title">Nostalgische Garten  und Wohndekoration seit über jahren bei ebayy</h5>
       </div>
       <div class="divider"></div>
-      <div class="navbar">
+
+      <div class="navigation">
         <ul>
-          <li><a class="active" href="#home">BESCHLÄGE</a></li>
-          <li><a href="#news">EISENFENSTER</a></li>
-          <li><a href="#contact">WOHNEN</a></li>
-          <li><a href="#about">AUSSENLAMPEN</a></li>
-          <li><a href="#contact">AM HAUS</a></li>
-          <li><a href="#about">SEEHOF</a></li>
+          <li><a href="#">BESCHLÄGE</a>
+              <ul>
+                  <li><a href="#">Level 2 - 1</a></li>
+                  <li><a href="#">Level 2 - 2</a></li>
+                  <li><a href="#">Level 2 - 3</a></li>
+                  <li><a href="#">Level 2 - 4</a></li>
+              </ul>
+          </li>
+          <li><a href="#">EISENFENSTER</a>
+              <ul>
+                <li><a href="#">Level 2 - 1</a></li>
+                <li><a href="#">Level 2 - 2</a></li>
+                <li><a href="#">Level 2 - 3</a></li>
+                <li><a href="#">Level 2 - 4</a></li>
+             </ul>
+          </li>
+          <li><a href="#">WOHNEN</a>
+              <ul>
+                <li><a href="#">Level 2 - 1</a></li>
+                <li><a href="#">Level 2 - 2</a></li>
+                <li><a href="#">Level 2 - 3</a></li>
+                <li><a href="#">Level 2 - 4</a></li>
+             </ul>
+          </li>
+          <li><a href="#">AUSSENLAMPEN</a>
+              <ul>
+                <li><a href="#">Level 2 - 1</a></li>
+                <li><a href="#">Level 2 - 2</a></li>
+                <li><a href="#">Level 2 - 3</a></li>
+                <li><a href="#">Level 2 - 4</a></li>
+             </ul>
+          </li>
+          <li><a href="#">AM HAUS</a>
+              <ul>
+                <li><a href="#">Level 2 - 1</a></li>
+                <li><a href="#">Level 2 - 2</a></li>
+                <li><a href="#">Level 2 - 3</a></li>
+                <li><a href="#">Level 2 - 4</a></li>
+             </ul>
+          </li>
+          <li><a href="#">SEEHOF</a>
+              <ul>
+                <li><a href="#">Level 2 - 1</a></li>
+                <li><a href="#">Level 2 - 2</a></li>
+                <li><a href="#">Level 2 - 3</a></li>
+                <li><a href="#">Level 2 - 4</a></li>
+             </ul>
+          </li>
         </ul>
       </div>
       <div class="divider"></div>
