--- a/home.html
+++ b/home.html
@@ -49,58 +49,127 @@
         <h5 class="text-center sub-title">Nostalgische Garten  und Wohndekoration seit über jahren bei ebayy</h5>
       </div>
       <div class="divider"></div>
+      <div class="accordion vertical visible-xs-only">
+          <ul>
+              <li>
+                  <input type="checkbox" id="checkbox-1" name="checkbox-accordion" />
+                  <label for="checkbox-1">BESCHLÄGE</label>
+                  <div class="content">
+                    <ul>
+                      <a href="#"><li>Lorem ipsum dolor</li></a>
+                      <a href="#"><li>Consectetur adipisicing</li></a>
+                      <a href="#"><li>Reprehenderit</li></a>
+                      <a href="#"><li>Commodo consequat</li></a>
+                    </ul>
+                  </div>
+              </li>
+              <li>
+                  <input type="checkbox" id="checkbox-2" name="checkbox-accordion" />
+                  <label for="checkbox-2">EISENFENSTER</label>
+                  <div class="content">
+                    <ul>
+                      <a href="#"><li>Lorem ipsum dolor</li></a>
+                      <a href="#"><li>Consectetur adipisicing</li></a>
+                      <a href="#"><li>Reprehenderit</li></a>
+                      <a href="#"><li>Commodo consequat</li></a>
+                    </ul>
+                  </div>
+              </li>
+              <li>
+                  <input type="checkbox" id="checkbox-3" name="checkbox-accordion" />
+                  <label for="checkbox-3">WOHNEN</label>
+                  <div class="content">
+                    <ul>
+                      <a href="#"><li>Lorem ipsum dolor</li></a>
+                      <a href="#"><li>Consectetur adipisicing</li></a>
+                      <a href="#"><li>Reprehenderit</li></a>
+                      <a href="#"><li>Commodo consequat</li></a>
+                    </ul>
+                  </div>
+              </li>
+              <li>
+                  <input type="checkbox" id="checkbox-4" name="checkbox-accordion" />
+                  <label for="checkbox-4">AUSSENLAMPEN</label>
+                  <div class="content">
+                    <ul>
+                      <a href="#"><li>Lorem ipsum dolor</li></a>
+                      <a href="#"><li>Consectetur adipisicing</li></a>
+                      <a href="#"><li>Reprehenderit</li></a>
+                      <a href="#"><li>Commodo consequat</li></a>
+                    </ul>
+                  </div>
+              </li>
+              <li>
+                  <input type="checkbox" id="checkbox-5" name="checkbox-accordion" />
+                  <label for="checkbox-5">AM HAUS SEEHOF</label>
+                  <div class="content">
+                    <ul>
+                      <a href="#"><li>Lorem ipsum dolor</li></a>
+                      <a href="#"><li>Consectetur adipisicing</li></a>
+                      <a href="#"><li>Reprehenderit</li></a>
+                      <a href="#"><li>Commodo consequat</li></a>
+                    </ul>
+                  </div>
+              </li>
+          </ul>
+      </div>
+      <div id="demo" class="hidden-xs">
+        <div class="wrapper hidden-xs">
+            <div class="content">
+                <ul>
+                    <a href="#"><li>Lorem ipsum dolor</li></a>
+                    <a href="#"><li>Consectetur adipisicing</li></a>
+                    <a href="#"><li>Reprehenderit</li></a>
+                    <a href="#"><li>Commodo consequat</li></a>
+                </ul>
+            </div>
+            <div class="parent">BESCHLÄGE</div>
+        </div>
 
-      <div class="navigation">
-        <ul>
-          <li><a href="#">BESCHLÄGE</a>
-              <ul>
-                  <li><a href="#">Level 2 - 1</a></li>
-                  <li><a href="#">Level 2 - 2</a></li>
-                  <li><a href="#">Level 2 - 3</a></li>
-                  <li><a href="#">Level 2 - 4</a></li>
-              </ul>
-          </li>
-          <li><a href="#">EISENFENSTER</a>
-              <ul>
-                <li><a href="#">Level 2 - 1</a></li>
-                <li><a href="#">Level 2 - 2</a></li>
-                <li><a href="#">Level 2 - 3</a></li>
-                <li><a href="#">Level 2 - 4</a></li>
-             </ul>
-          </li>
-          <li><a href="#">WOHNEN</a>
-              <ul>
-                <li><a href="#">Level 2 - 1</a></li>
-                <li><a href="#">Level 2 - 2</a></li>
-                <li><a href="#">Level 2 - 3</a></li>
-                <li><a href="#">Level 2 - 4</a></li>
-             </ul>
-          </li>
-          <li><a href="#">AUSSENLAMPEN</a>
-              <ul>
-                <li><a href="#">Level 2 - 1</a></li>
-                <li><a href="#">Level 2 - 2</a></li>
-                <li><a href="#">Level 2 - 3</a></li>
-                <li><a href="#">Level 2 - 4</a></li>
-             </ul>
-          </li>
-          <li><a href="#">AM HAUS</a>
-              <ul>
-                <li><a href="#">Level 2 - 1</a></li>
-                <li><a href="#">Level 2 - 2</a></li>
-                <li><a href="#">Level 2 - 3</a></li>
-                <li><a href="#">Level 2 - 4</a></li>
-             </ul>
-          </li>
-          <li><a href="#">SEEHOF</a>
-              <ul>
-                <li><a href="#">Level 2 - 1</a></li>
-                <li><a href="#">Level 2 - 2</a></li>
-                <li><a href="#">Level 2 - 3</a></li>
-                <li><a href="#">Level 2 - 4</a></li>
-             </ul>
-          </li>
-        </ul>
+        <div class="wrapper hidden-xs">
+            <div class="content">
+                <ul>
+                    <a href="#"><li>Lorem ipsum dolor</li></a>
+                    <a href="#"><li>Consectetur adipisicing</li></a>
+                    <a href="#"><li>Reprehenderit</li></a>
+                    <a href="#"><li>Commodo consequat</li></a>
+                </ul>
+            </div>
+            <div class="parent">EISENFENSTER</div>
+        </div>
+        <div class="wrapper hidden-xs">
+            <div class="content">
+                <ul>
+                    <a href="#"><li>Lorem ipsum dolor</li></a>
+                    <a href="#"><li>Consectetur adipisicing</li></a>
+                    <a href="#"><li>Reprehenderit</li></a>
+                    <a href="#"><li>Commodo consequat</li></a>
+                </ul>
+            </div>
+            <div class="parent">WOHNEN</div>
+        </div>
+        <div class="wrapper hidden-xs">
+            <div class="content">
+                <ul>
+                    <a href="#"><li>Lorem ipsum dolor</li></a>
+                    <a href="#"><li>Consectetur adipisicing</li></a>
+                    <a href="#"><li>Reprehenderit</li></a>
+                    <a href="#"><li>Commodo consequat</li></a>
+                </ul>
+            </div>
+            <div class="parent">AUSSENLAMPEN</div>
+        </div>
+        <div class="wrapper hidden-xs">
+            <div class="content">
+                <ul>
+                    <a href="#"><li>Lorem ipsum dolor</li></a>
+                    <a href="#"><li>Consectetur adipisicing</li></a>
+                    <a href="#"><li>Reprehenderit</li></a>
+                    <a href="#"><li>Commodo consequat</li></a>
+                </ul>
+            </div>
+            <div class="parent">AM HAUS SEEHOF</div>
+        </div>
       </div>
       <div class="divider"></div>
     </div>
